--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ plugins {
     id 'io.qameta.allure' version '2.12.0'
 }
 
+def allureVersion = "2.17.2";
+
 allure {
     report{
-        version.set("2.17.2")
+        version.set(allureVersion)
     }
     adapter{
         aspectjWeaver.set(true)
