--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-api:5.13.3',
             'com.codeborne:selenide:7.9.4',
             'io.qameta.allure:allure-selenide:2.29.1',
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            'org.slf4j:slf4j-simple:2.0.17'
     )
 
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.13.3')
